--- a/index.html
+++ b/index.html
@@ -605,20 +605,22 @@
 					<br>
 					<br>
 					<h1>Hong Kong SVG animation</h1>
+					<p> (!!!WORK IN PROGRESS!!!)</p>
 					<a href="https:/peggalex.github.io/hk" target="_blank">https:/peggalex.github.io/hk</a>
-					<p>SVG artwork of Victoria Harbour in Hong Kong, animated using CSS.</p>
-					<p>Work in progress, recommend firefox for optimal SVG performance.</p>
+					<p> SVG artwork of Victoria Harbour in Hong Kong, animated using CSS.</p>
+					<p> Recommend firefox for optimal SVG performance.</p>
 					<br>
 					<br>
 					<h1>Shortest Path Finder</h1>
 					<a href="https://peggalex.github.io/pathfinder.html" target="_blank">https://peggalex.github.com/pathfinder.html</a>
 					<p> (!!!WORK IN PROGRESS!!!)</p>
 					<p> Shortest path from a point A to point B given drawn polygon obstacles. </p>
-					<p> Allows for uploading images to trace ontop of. </p>
+					<p> Allows for uploading images to trace on top of. </p>
 					<p> Currently in the process of converting my working python code <a href='https://github.com/peggalex/pathfinder' target="_blank">here</a> to javascript</p>
 					<br>
 					<br>
 					<h1>Converting Node Graphs to Latex</h1>
+					<p> (!!!WORK IN PROGRESS!!!)</p>
 					<a href="https://peggalex.github.io/grapher.html" target="_blank">https://peggalex.github.com/grapher.html</a>
 					<p> Draw a node graph and then convert it into code that can be copied into latex. </p>
 					<p> Expands on features from this similar website: <a href="http://madebyevan.com/fsm/"> http://madebyevan.com/fsm/</a></p>
