clean up grapher

--- a/grapher.html
+++ b/grapher.html
@@ -178,7 +178,7 @@
 					<button id='click'>👆🏻</button>
 				</span>
 				<span title='delete polygons'>
-					<button id='cut'>✂️</button>
+					<button id='cut'>!✂️</button>
 				</span>
 			</div>
 			<div>
@@ -186,12 +186,12 @@
 					<button id='nodes'>◯</button>
 				</span>
 				<span title='draw a polygon by dragging'>
-					<button id='edges'>✏️</button>
+					<button id='edges'>!✏️</button>
 				</span>
 			</div>
 			<div>
 				<span title='clear all'>
-					<button id='clearAll'>🗑</button>
+					<button id='clearAll'>!🗑</button>
 				</span>
 			</div>
 			<br>
@@ -213,16 +213,6 @@
 				<text x="0" y="0" id="cursorIcon" style="pointer-events: none;"></text>
 			</svg>
 		</div>
-		<div id='imageUploadDiv'>
-			<form id='imageUpload'>
-				<div class='col'>
-		    		<input id="imageInput" type="file" accept="image/*" required>
-		    		<button type='submit'>upload image</button>
-		    	</div>
-			</form>
-		</div>
-
-		<img id='hi'>
 	</div>
 </body>
 
