--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="description" content="Portfolio of Alex Pegg programming projects and info." />
+	<meta name="keywords" content="Alex, Pegg, Alexander, programming, javascript, Vila">
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
 	<meta charset="utf-8"/> <!-- firefox throws an error without this -->
+
 	<link href="https://fonts.googleapis.com/css?family=Public+Sans:100&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Serif+JP:200&display=swap" rel="stylesheet">
 	<link href="https://peggalex.github.io/DPStickWebFont/stylesheet.css" rel="stylesheet">	
