--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta name="description" content="Portfolio of Alex Pegg programming projects and info." />
 	<meta name="keywords" content="Alex, Pegg, Alexander, programming, javascript, Vila">
+	<meta name="author" content="Alex Pegg">
+
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
 	<meta charset="utf-8"/> <!-- firefox throws an error without this -->
