--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
 					<p>I'm majoring in both computer science and economics for an honorary bachelors of science. I've been a tutorial and marking TA for CSC108.</p>
 					<br>
 					<h1>Interests</h1>
-					<p>I'm into machine learning and full stack development, making standalone apps. Despite the adage about not reinventing the wheel, I try not to use external libraries, as these apps are more of an excersize of applying my knowledge. I wanna get a Raspberry PI and install apache so I can have a non-static website with more interactive applications that link different backend technologies like python and Java to my apps.</p>
+					<p>I'm into machine learning and full stack development, making standalone apps. Despite the adage about not reinventing the wheel, I try not to use external libraries, as these apps are more of an exercise of applying my knowledge. I wanna get a Raspberry PI and install apache so I can have a non-static website with more interactive applications that link different backend technologies like python and Java to my apps.</p>
 					<br>
 					<p>I also like making animated SVGs in illustrator with css/js, watching tv (rip Suits) and playing league with friends.</p>
 					<br>
