--- a/grapher.html
+++ b/grapher.html
@@ -186,7 +186,7 @@
 					<button id='nodes'>◯</button>
 				</span>
 				<span title='draw a polygon by dragging'>
-					<button id='edges'>!✏️</button>
+					<button id='edges'>✏️</button>
 				</span>
 			</div>
 			<div>
