--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
 					<a href="https://peggalex.github.io/resume3.html" target="_blank">https://peggalex.github.com/resume3.html</a>
 					<p>Resume stylized to look like an ide using a combination of syntax from different programming languages.</p>
 					<p>Webfonts unpredictable in Safari, Firefox - recommend chrome</p>
-					<p> Compiled pdf version <a href="https://peggalex.github.io/alex_pegg_resume.pdf" target="_blank">here</a>.</p>
+					<p> Compiled pdf version <a href="https://peggalex.github.io/Alex_Pegg_Resume.pdf" target="_blank">here</a>.</p>
 					<p>Professional resume <a href='https://www.overleaf.com/read/kttybhdbwppk' target="_blank">here</a>.</p>
 					<br>
 					<br>
@@ -659,7 +659,7 @@
 					<h1>Latex Resume</h1>
 					<a href='https://www.overleaf.com/read/kttybhdbwppk' target="_blank">LaTeX resume (professional)</a>
 					<br>
-					<a href='https://peggalex.github.io/alex_pegg_resume.pdf' target="_blank">html resume (stylized)</a>
+					<a href='https://peggalex.github.io/Alex_Pegg_Resume.pdf' target="_blank">html resume (stylized)</a>
 
 				</div>
 			</div>
