--- a/index.html
+++ b/index.html
@@ -659,7 +659,9 @@
 					<h1>Latex Resume</h1>
 					<a href='https://www.overleaf.com/read/kttybhdbwppk' target="_blank">LaTeX resume (professional)</a>
 					<br>
-					<a href='https://peggalex.github.io/Alex_Pegg_Resume.pdf' target="_blank">html resume (stylized)</a>
+					<a href='https://peggalex.github.io/Alex_Pegg_Resume.pdf' target="_blank">LaTeX resume (professional, compiled)</a>
+					<br>
+					<a href="https://peggalex.github.io/resume3.html" target="_blank">html resume (stylized)</a>
 
 				</div>
 			</div>
