--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
 				</div>
 				<div class='projects content' id='content_projects'>
 					<h1>Microeconomics 2 Goods Model Grapher</h1>
-					<a href="https://mcsapps.utm.utoronto.ca/micrographer" target="_blank">https://peggalex.github.io/rachel.html</a>
+					<a href="https://mcsapps.utm.utoronto.ca/micrographer" target="_blank">https://mcsapps.utm.utoronto.ca/micrographer</a>
 					<p>Full stack application built for the economics department of University of Toronto.</p>
 					<p>Given a utility function, a change in the price of x, a price y and income, calculate the subsitution, income effects of a
 					utility-maximising customer.</p>
