--- a/index.html
+++ b/index.html
@@ -608,10 +608,7 @@
 					<h1>Microeconomics 2 Goods Model Grapher</h1>
 					<a href="https://mcsapps.utm.utoronto.ca/micrographer" target="_blank">https://mcsapps.utm.utoronto.ca/micrographer</a>
 					<p>Full stack application built for the economics department of University of Toronto.</p>
-					<p>Given a utility function, a change in the price of x, a price y and income, calculate the subsitution, income effects of a
-					utility-maximising customer.</p>
-					<p>Works with cobb douglas functions, substitutes and complements.</p>
-					<p>An example input is [x*y^2, 4, 1, 2, 36], or [min(3x+y, 3y+x), 4, 1, 2, 36].</p>
+					<p>Microeconomics indifference curve analysis application.</p>
 					<p>The optima is calculated using an algebraic parser sympy in the backend python.</p>
 					<p>The result is graphed with the <a href="https://www.desmos.com/api/v1.4/docs/index.html" target="_blank">Desmos API</a></p>
 					<p>The server is uses web sockets, with a flask backend, and a socket.io frontend.</p>
