--- a/graphDemo.html
+++ b/graphDemo.html
@@ -11,9 +11,9 @@
 	</style>
 </head>
 <body>
-	<img src='./graph1.png'>
-	<img src='./graph1.png'>
-	<img src='./graph1.png'>
+	<img src='./bankGraph1.png'>
+	<img src='./bankGraph2.png'>
+	<img src='./bankGraph3.png'>
 
 </body>
 </html>
